--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/
 # .gitignore
 /src/main/resources/application.properties
 src/main/resources/application.properties
+application.properties
